category and links pages adjusted & recipes added

--- a/categoria.html
+++ b/categoria.html
@@ -70,36 +70,36 @@
               <ul class="food-sublist">
                 <li class="li-children-comida">
                   <div>
-                    <a href="">
+                    <a href="prbebidas1.html">
                       <img src="img/foto-bebida1.jpg" alt="Smoothies de fresa kiwi y avena" />
                     </a>
                   </div>
                   <div class="food-name">
-                    <a href="">
+                    <a href="prbebidas1.html">
                       <p>Smoothies de fresa, kiwi y avena</p>
                     </a>
                   </div>
                 </li>
                 <li class="li-children-comida">
                   <div>
-                    <a href="">
+                    <a href="prbebidas2.html">
                       <img src="img/foto-bebida2.jpg" alt="Refresco de limon" />
                     </a>
                   </div>
                   <div class="food-name">
-                    <a href="">
+                    <a href="prbebidas2.html">
                       <p>Refresco de limón</p>
                     </a>
                   </div>
                 </li>
                 <li class="li-children-comida">
                   <div>
-                    <a href="">
+                    <a href="prbebidas3.html">
                       <img src="img/foto-bebida3.jpg" alt="Batido detox de espinacas y hierbabuena" />
                     </a>
                   </div>
                   <div class="food-name">
-                    <a href="">
+                    <a href="prbebidas3.html">
                       <p>Batido detox de espinacas y hierbabuena</p>
                     </a>
                   </div>
@@ -111,36 +111,36 @@
               <ul class="food-sublist">
                 <li class="li-children-comida">
                   <div>
-                    <a href="">
+                    <a href="prplatos1.html">
                       <img src="img/foto-comida1.jpg" alt="Tosta de huevos del campo" />
                     </a>
                   </div>
                   <div class="food-name">
-                    <a href="">
+                    <a href="prplatos1.html">
                       <p>Tosta de huevos del campo</p>
                     </a>
                   </div>
                 </li>
                 <li class="li-children-comida">
                   <div>
-                    <a href="">
+                    <a href="prplatos2.html">
                       <img src="img/foto-comida2.jpg" alt="Huevos prerrotos" />
                     </a>
                   </div>
                   <div class="food-name">
-                    <a href="">
+                    <a href="prplatos2.html">
                       <p>Huevos prerrotos</p>
                     </a>
                   </div>
                 </li>
                 <li class="li-children-comida">
                   <div>
-                    <a href="">
+                    <a href="prplatos3.html">
                       <img src="img/foto-comida3.jpg" alt="Tacos cortos" />
                     </a>
                   </div>
                   <div class="food-name">
-                    <a href="">
+                    <a href="prplatos3.html">
                       <p>Tacos cortos</p>
                     </a>
                   </div>
@@ -152,36 +152,36 @@
               <ul class="food-sublist">
                 <li class="li-children-comida">
                   <div>
-                    <a href="">
+                    <a href="prpostres1.html">
                       <img src="img/foto-postres1.jpg" alt="Nutella con imaginacion" />
                     </a>
                   </div>
                   <div class="food-name">
-                    <a href="">
+                    <a href="prpostres1.html">
                       <p>Nutella con imaginación</p>
                     </a>
                   </div>
                 </li>
                 <li class="li-children-comida">
                   <div>
-                    <a href="">
+                    <a href="prpostres2.html">
                       <img src="img/foto-postres2.jpg" alt="Macedonia del este" />
                     </a>
                   </div>
                   <div class="food-name">
-                    <a href="">
+                    <a href="prpostres2.html">
                       <p>Macedonia del este</p>
                     </a>
                   </div>
                 </li>
                 <li class="li-children-comida">
                   <div>
-                    <a href="">
+                    <a href="prpostres3.html">
                       <img src="img/foto-postres3.jpg" alt="Red army velvet cake" />
                     </a>
                   </div>
                   <div class="food-name">
-                    <a href="">
+                    <a href="prpostres3.html">
                       <p>Red army velvet cake</p>
                     </a>
                   </div>
@@ -193,36 +193,36 @@
               <ul class="food-sublist">
                 <li class="li-children-comida">
                   <div>
-                    <a href="">
+                    <a href="prbolleria1.html">
                       <img src="img/foto-vegano1.jpg" alt="Pan de comuna" />
                     </a>
                   </div>
                   <div class="food-name">
-                    <a href="">
+                    <a href="prbolleria1.html">
                       <p>Pan de comuna</p>
                     </a>
                   </div>
                 </li>
                 <li class="li-children-comida">
                   <div>
-                    <a href="">
+                    <a href="prbolleria2.html">
                       <img src="img/foto-vegano2.jpg" alt="Pasta con cosas" />
                     </a>
                   </div>
                   <div class="food-name">
-                    <a href="">
+                    <a href="prbolleria2.html">
                       <p>Pasta con cosas</p>
                     </a>
                   </div>
                 </li>
                 <li class="li-children-comida">
                   <div>
-                    <a href="">
+                    <a href="prbolleria3.html">
                       <img src="img/foto-vegano3.jpg" alt="Pizza nodemigrante" />
                     </a>
                   </div>
                   <div class="food-name">
-                    <a href="">
+                    <a href="prbolleria3.html">
                       <p>Pizza nodemigrante</p>
                     </a>
                   </div>
