--- a/enlaces.html
+++ b/enlaces.html
@@ -314,6 +314,15 @@
                   <img src="img/external_link.svg" alt="Link to foodiesfeed" height="12" width="12" /></a>
               </dd>
 
+              <dt class="bold font-size-1dot3rem">Fotos de autores</dt>
+              <dd>
+                Las fotos de autores han sido generadas en la web <a class="visited-red color-red hover-red-alpha"
+                  href="https://thispersondoesnotexist.com/">thispersondoesnotexists</a>.<br />
+                <a class="font-size-0dot9 visited-red color-red hover-red-alpha"
+                  href="https://thispersondoesnotexist.com/">Origen:
+                  thispersondoesnotexists (Imágenes de personas generadas por un algoritmo de inteligencia artificial)
+                  <img src="img/external_link.svg" alt="Link to thispersondoesnotexist" height="12" width="12" /></a>
+              </dd>
 
             </dl>
           </div>
