changed some texts

--- a/presentacion.html
+++ b/presentacion.html
@@ -86,9 +86,7 @@
           <img src="img/categoria-bebida.jpg" alt="Imagen categoria bebidas" />
           <h2 class="lighter">Bebidas y cócteles</h2>
           <p class="line-height-1dot6 margin-bottom-20">
-            Mejores guiones, actores, directores ... Se consideran las
-            mejores películas por los premios que han ganado. Y tú, ¿qué
-            opinas?
+            ¿Bebedor social? ¡Entra y prueba nuestros cócteles!
           </p>
           <a class="color-red hover-red-alpha" href="categoria.html#li-bebidas">Ver últimas recetas +</a>
         </li>
@@ -96,8 +94,8 @@
           <img src="img/categoria-platos.jpg" alt="Imagen categoria platos" />
           <h2>Platos para almuerzos y comidas</h2>
           <p class="line-height-1dot6 margin-bottom-20">
-            La ciencia ficción no siempre está llena de monstruos y
-            batallas. ¡Descubre con nosotros la conquista del espacio!
+            Para comer a cualquier hora, aunque si desayunas esto probablemente te guste saltar desde los balcones de tu
+            casa.
           </p>
           <a class="color-red hover-red-alpha" href="categoria.html#li-platos">Ver últimas recetas +</a>
         </li>
@@ -106,9 +104,7 @@
           <img src="img/categoria-postres.jpg" alt="Imagen categoria postres" />
           <h2>Postres</h2>
           <p class="line-height-1dot6 margin-bottom-20">
-            ¿Eres de los que les gusta estar toda la película al borde de la
-            silla, preguntándote qué pasará después y qué está pasando
-            realmente?
+            ¿La diabetes es para tí un invento del sistema? ¡Pon a prueba tu páncreas con nuestras maravillosas tartas!
           </p>
           <a class="color-red hover-red-alpha" href="categoria.html#li-postres">Ver últimas recetas +</a>
         </li>
@@ -117,8 +113,7 @@
           <img src="img/categoria-bolleria.jpg" alt="Imagen categoria bolleria" />
           <h2>Bollería y pastas</h2>
           <p class="line-height-1dot6 margin-bottom-20">
-            ¡Volvemos a los clásicos! Desde los hermanos Marx a Hitchcock,
-            repasaremos las películas que marcaron generaciones.
+            ¿Eres forofo de los hidratos de carbono? Prueba a hacer nuestras recetas de bollería y pastas
           </p>
           <a class="color-red hover-red-alpha" href="categoria.html#li-bolleria">Ver últimas recetas +</a>
         </li>
