some minor changes

--- a/categoria.html
+++ b/categoria.html
@@ -63,7 +63,7 @@
         </p>
       </div>
       <div id="body-sesiones-container" class="padding-top-10 margin-top-40 font-open-sans">
-        <div id="films-covers-container">
+        <div id="food-covers-container">
           <ul>
             <li id="li-bebidas" class="li-parent-food">
               Bebidas y cócteles
