--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="logo-header">
         <a href="index.html">
           <div id="logo-header-inner">
-            <img id="logo-img" src="img/logo.png" alt="Logo" />
+            <img id="logo-img" src="img/logo.svg" alt="Logo" />
             <div id="logo-text-header">
               <span class="italic let-spa-min-1dot5 color-black font1dot5rem">En tu</span>
               <span class="font2rem color-black bold">plato</span>
@@ -60,19 +60,19 @@
       <h1 class="align-center">¿Qué podrás encontrar?</h1>
       <div id="all-index-blocks" class="align-center margin-bottom-120">
         <div class="block-logo">
-          <img src="img/index-food1.png" alt="Food logo hamburger" />
+          <img src="img/index-food1.svg" alt="Food logo hamburger" />
           <div>La comida que te gusta</div>
         </div>
         <div class="block-logo">
-          <img src="img/index-food2.png" alt="Food logo meal" />
+          <img src="img/index-food2.svg" alt="Food logo meal" />
           <div>Recetas riquísimas</div>
         </div>
         <div class="block-logo">
-          <img src="img/index-food3.png" alt="Food logo hands with apple" />
+          <img src="img/index-food3.svg" alt="Food logo hands with apple" />
           <div>Comida sana</div>
         </div>
         <div class="block-logo">
-          <img src="img/index-food4.png" alt="Food logo basket" />
+          <img src="img/index-food4.svg" alt="Food logo basket" />
           <div>Qué comprar</div>
         </div>
       </div>
