--- a/prbolleria1.html
+++ b/prbolleria1.html
@@ -20,7 +20,7 @@
       <div class="logo-header">
         <a href="index.html">
           <div id="logo-header-inner">
-            <img id="logo-img" src="img/logo.png" alt="Logo" />
+            <img id="logo-img" src="img/logo.svg" alt="Logo" />
             <div id="logo-text-header">
               <span class="italic let-spa-min-1dot5 color-black font1dot5rem">En tu</span>
               <span class="font2rem color-black bold">plato</span>
