Added clip-paths to presentacion.html images

--- a/presentacion.html
+++ b/presentacion.html
@@ -83,7 +83,7 @@
         nuestras categorías!</h1>
       <ul id="categorias-pre-ls" class="margin-bottom-40">
         <li>
-          <img src="img/categoria-bebida.jpg" alt="Imagen categoria bebidas" />
+          <img class="clip-hexagon-type1" src="img/categoria-bebida.jpg" alt="Imagen categoria bebidas" />
           <h2 class="lighter">Bebidas y cócteles</h2>
           <p class="line-height-1dot6 margin-bottom-20">
             ¿Bebedor social? ¡Entra y prueba nuestros cócteles!
@@ -91,7 +91,7 @@
           <a class="color-red hover-red-alpha" href="categoria.html#li-bebidas">Ver últimas recetas +</a>
         </li>
         <li>
-          <img src="img/categoria-platos.jpg" alt="Imagen categoria platos" />
+          <img class="clip-ellipse" src="img/categoria-platos.jpg" alt="Imagen categoria platos" />
           <h2>Platos para almuerzos y comidas</h2>
           <p class="line-height-1dot6 margin-bottom-20">
             Para comer a cualquier hora, aunque si desayunas esto probablemente te guste saltar desde los balcones de tu
@@ -101,7 +101,7 @@
         </li>
 
         <li>
-          <img src="img/categoria-postres.jpg" alt="Imagen categoria postres" />
+          <img class="clip-hexagon-type2" src="img/categoria-postres.jpg" alt="Imagen categoria postres" />
           <h2>Postres</h2>
           <p class="line-height-1dot6 margin-bottom-20">
             ¿La diabetes es para tí un invento del sistema? ¡Pon a prueba tu páncreas con nuestras maravillosas tartas!
@@ -110,7 +110,7 @@
         </li>
 
         <li>
-          <img src="img/categoria-bolleria.jpg" alt="Imagen categoria bolleria" />
+          <img class="clip-polygon" src="img/categoria-bolleria.jpg" alt="Imagen categoria bolleria" />
           <h2>Bollería y pastas</h2>
           <p class="line-height-1dot6 margin-bottom-20">
             ¿Eres forofo de los hidratos de carbono? Prueba a hacer nuestras recetas de bollería y pastas
